--- a/MoverioApp/app/src/main/res/layout/activity_content.xml
+++ b/MoverioApp/app/src/main/res/layout/activity_content.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.drdc_admin.moverioapp.activities.StudyLessonActivity">
+    tools:context="com.example.drdc_admin.moverioapp.activities.ContentActivity">
 
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
@@ -15,7 +15,7 @@
             android:theme="@style/AppTheme.AppBarOverlay">
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+                android:id="@+id/studyStepToolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
@@ -23,7 +23,7 @@
 
         </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_study_lesson" />
+    <include layout="@layout/fragment_content_activity" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
