--- a/MoverioApp/app/src/main/res/layout/activity_lesson_list.xml
+++ b/MoverioApp/app/src/main/res/layout/activity_lesson_list.xml
@@ -9,21 +9,21 @@
     android:background="#FFFFFF"
     android:fitsSystemWindows="true"
     tools:context="com.example.drdc_admin.moverioapp.activities.LessonListActivity">
-    <!--
+
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/AppTheme.AppBarOverlay">
 
             <android.support.v7.widget.Toolbar
-                android:id="@+id/toolbar"
+                android:id="@+id/stepListToolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="?attr/colorPrimary"
                 app:popupTheme="@style/AppTheme.PopupOverlay" />
 
         </android.support.design.widget.AppBarLayout>
-    -->
+
     <include layout="@layout/content_lesson_list" />
 
 
