--- a/MoverioApp/app/src/main/res/layout/fragment_content_activity.xml
+++ b/MoverioApp/app/src/main/res/layout/fragment_content_activity.xml
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.drdc_admin.moverioapp.activities.StudyLessonActivity"
+    tools:context="com.example.drdc_admin.moverioapp.activities.ContentActivity"
     tools:showIn="@layout/activity_study_lesson">
 
     <VideoView
