--- a/MoverioApp/app/src/main/res/layout/fragment_content_activity.xml
+++ b/MoverioApp/app/src/main/res/layout/fragment_content_activity.xml
@@ -16,7 +16,8 @@
 
         android:id="@+id/videoView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
