--- a/MoverioApp/app/src/main/res/layout/fragment_content_activity.xml
+++ b/MoverioApp/app/src/main/res/layout/fragment_content_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,9 +19,18 @@
         android:layout_height="wrap_content"
 
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true" />
 
+    <TextView
+        android:id="@+id/gesture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:text="GESTURE"
+        android:textColor="#00BFFF"
+        android:textSize="30dp"
+        android:visibility="invisible" />
 
 
-</FrameLayout>
+</RelativeLayout>
