--- a/WearablePhone/app/src/main/res/values/dimens.xml
+++ b/WearablePhone/app/src/main/res/values/dimens.xml
@@ -1,6 +1,12 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
+
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <dimen name="activity_tv_title">30dp</dimen>
+    <dimen name="listItem_title">25dp</dimen>
+    <dimen name="listItem_description">10dp</dimen>
+    <dimen name="listItem_topMargin">8dp</dimen>
+    <dimen name="listItem_border_width">3dp</dimen>
 </resources>
