--- a/MoverioApp/app/src/main/res/layout/fragment_course_list_item.xml
+++ b/MoverioApp/app/src/main/res/layout/fragment_course_list_item.xml
@@ -10,13 +10,11 @@
     android:layout_height="match_parent"
     android:background="@drawable/list_item"
     android:paddingBottom="@dimen/abc_dialog_list_padding_vertical_material"
-    android:paddingTop="@dimen/abc_dialog_list_padding_vertical_material"
     android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
-    android:paddingRight="@dimen/abc_list_item_padding_horizontal_material">
+    android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+    android:paddingTop="@dimen/abc_dialog_list_padding_vertical_material">
 
     <TextView
-
-        
         android:id="@+id/course_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -55,6 +53,5 @@
         android:layout_toRightOf="@id/course_img"
         android:text="Description"
         android:textSize="@dimen/abc_text_size_medium_material" />
-
 
 </RelativeLayout>
