--- a/MoverioApp/app/src/main/res/layout/fragment_content_activity.xml
+++ b/MoverioApp/app/src/main/res/layout/fragment_content_activity.xml
@@ -2,6 +2,7 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/contentActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,27 +11,27 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.drdc_admin.moverioapp.activities.ContentActivity"
-    tools:showIn="@layout/activity_study_lesson">
+    tools:showIn="@layout/activity_content">
 
-    <VideoView
+    <!--<VideoView-->
 
-        android:id="@+id/videoView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        <!--android:id="@+id/videoView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
 
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true" />
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:layout_alignParentTop="true" />-->
 
-    <TextView
-        android:id="@+id/gesture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:text="GESTURE"
-        android:textColor="#00BFFF"
-        android:textSize="30dp"
-        android:visibility="invisible" />
+    <!--<TextView-->
+        <!--android:id="@+id/gestureOnVideo"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentBottom="true"-->
+        <!--android:layout_alignParentLeft="true"-->
+        <!--android:text="GESTURE"-->
+        <!--android:textColor="#00BFFF"-->
+        <!--android:textSize="30dp"-->
+        <!--android:visibility="invisible" />-->
 
 
 </FrameLayout>
