--- a/WearablePhone/app/src/main/res/layout/content_course_list.xml
+++ b/WearablePhone/app/src/main/res/layout/content_course_list.xml
@@ -18,7 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:text="@string/courseListTitle"
+        android:text="@string/choose_course"
         android:textSize="@dimen/abc_text_size_large_material" />
 
     <ListView
