--- a/WearablePhone/app/src/main/res/layout/content_step_list.xml
+++ b/WearablePhone/app/src/main/res/layout/content_step_list.xml
@@ -16,7 +16,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:text="@string/stepListTitle"
+        android:text="@string/choose_step"
         android:textSize="@dimen/abc_text_size_large_material" />
 
     <ListView
