--- a/WearablePhone/app/src/main/res/layout/fragment_step_list_item.xml
+++ b/WearablePhone/app/src/main/res/layout/fragment_step_list_item.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     android:background="@drawable/list_item"
     android:paddingBottom="@dimen/abc_dialog_list_padding_vertical_material"
-    android:paddingTop="@dimen/abc_dialog_list_padding_vertical_material"
     android:paddingLeft="@dimen/abc_list_item_padding_horizontal_material"
-    android:paddingRight="@dimen/abc_list_item_padding_horizontal_material">
+    android:paddingRight="@dimen/abc_list_item_padding_horizontal_material"
+    android:paddingTop="@dimen/abc_dialog_list_padding_vertical_material">
 
 
     <TextView
@@ -15,37 +15,52 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:text="Title"
+        android:gravity="center"
         android:textAllCaps="true"
-        android:textSize="@dimen/abc_text_size_title_material"
-        android:gravity="center"/>
+        android:textSize="@dimen/abc_text_size_title_material" />
 
-    <ImageView
-        android:id="@+id/play_button"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        android:layout_below="@id/lesson_title"
-        android:src="@drawable/play_button" />
-
-
-    <ImageView
-        android:id="@+id/lesson_img"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_below="@id/lesson_title"
-        android:scaleType="centerCrop"
-        android:src="@drawable/lesson_one" />
-
-    <TextView
-        android:id="@+id/lesson_description"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Description"
-        android:layout_toRightOf="@id/lesson_img"
+        android:layout_height="match_parent"
         android:layout_below="@id/lesson_title"
-        android:textSize="@dimen/abc_text_size_medium_material" />
+        android:orientation="horizontal"
+        >
 
+        <ImageView
+            android:id="@+id/lesson_img"
+            android:layout_width="0dp"
+            android:layout_height="160dp"
+            android:layout_weight="1"
+            />
+
+        <ImageView
+            android:id="@+id/play_button"
+            android:layout_gravity="center_vertical"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:src="@drawable/play_button" />
+
+
+
+
+        <!--<ImageView-->
+            <!--android:id="@+id/lesson_img"-->
+            <!--android:layout_width="160dp"-->
+            <!--android:layout_height="160dp"-->
+            <!--android:layout_alignParentLeft="true"-->
+            <!--/>-->
+
+        <!--<TextView-->
+        <!--android:id="@+id/lesson_description"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Description"-->
+        <!--android:layout_toStartOf="@id/play_button"-->
+        <!--android:layout_below="@id/lesson_title"-->
+        <!--android:textSize="@dimen/abc_text_size_medium_material" />-->
+        <!--android:layout_toEndOf="@id/lesson_img"-->
+
+    </LinearLayout>
 
 </RelativeLayout>
